--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,18 +4,12 @@ sonar.projectVersion=1.0
 
 # Path to source directories
 sonar.sources=src
-# Path to test directories
 sonar.tests=src/components/__tests__
 sonar.test.inclusions=**/*.test.tsx,**/*.test.ts
 
-# Language specific settings
-sonar.language=ts
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.typescript.tsconfigPath=tsconfig.json
-
-# Exclusions
-sonar.exclusions=**/node_modules/**,**/.next/**,**/public/**,**/coverage/**,jest.config.ts,jest.setup.ts,next.config.ts,tailwind.config.ts
-sonar.test.exclusions=**/node_modules/**
-
 # Encoding
 sonar.sourceEncoding=UTF-8
+
+# Exclusions
+sonar.exclusions=**/node_modules/**,**/.next/**,**/public/**,**/coverage/**
+
