--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=portfolio-website
+sonar.organization=dhanakbar
 sonar.projectName=Portfolio Website
 sonar.projectVersion=1.0
 
@@ -6,6 +7,7 @@ sonar.projectVersion=1.0
 sonar.sources=src
 sonar.tests=src/components/__tests__
 sonar.test.inclusions=**/*.test.tsx,**/*.test.ts
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # Encoding
 sonar.sourceEncoding=UTF-8
