feat: update SonarQube scan action to a specific commit hash and add `sonar.branch.name` to project properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=portfolio-website
 sonar.organization=dhanakbar
+sonar.branch.name=master
 sonar.projectName=Portfolio Website
 sonar.projectVersion=1.0
 
